<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">


    <ImageView
        android:id="@+id/logo2"
        android:layout_width="270dp"
        android:layout_height="99dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="67dp"
        android:contentDescription="@string/logoString"
        android:src="@drawable/ic_logo" />

    <TextView
        android:id="@+id/logoText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="112dp"
        android:layout_marginTop="116dp"
        android:fontFamily="sans-serif"
        android:text="@string/logoString"
        android:textColor="@android:color/white"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/signUpUserID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="221dp"
        android:ems="10"
        android:hint="@string/SignUpUserID"
        android:inputType="text"
        android:textColor="@android:color/darker_gray" />

    <EditText
        android:id="@+id/signUpEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpUserID"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/SignUpEmail"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/darker_gray" />

    <EditText
        android:id="@+id/signUpPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpEmail"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/SignUpPhone"
        android:inputType="text|phone"
        android:textColor="@android:color/darker_gray" />

    <Button
        android:id="@+id/FinishSignUpButton"
        android:layout_width="112dp"
        android:layout_height="50dp"
        android:layout_below="@+id/CareProviderCheckBox"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="149dp"
        android:background="#1de9b6"
        android:text="@string/SignUpButton"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/PatientCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpPhoneNumber"
        android:layout_alignParentStart="true"
        android:layout_marginStart="99dp"
        android:layout_marginTop="24dp"
        android:text="@string/checkBoxPatient" />

    <CheckBox
        android:id="@+id/CareProviderCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpPhoneNumber"
        android:layout_marginStart="21dp"
        android:layout_marginTop="24dp"
        android:layout_toEndOf="@+id/PatientCheckBox"
        android:text="@string/checkBoxCareProvider" />

</RelativeLayout>