<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CareProviderProfileActivity">

    <Button
        android:id="@+id/providerEditProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="25dp"
        android:layout_toStartOf="@+id/patientListButton"
        android:text="@string/editAccountButton"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/ProfileSubTitle"
        android:layout_width="105dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/userProfileSubTitle"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/userIDText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="125dp"
        android:text="@string/userIDText"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userIDText"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/emailText" />

    <TextView
        android:id="@+id/phoneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailText"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/phoneText" />

    <TextView
        android:id="@+id/DisplayUserID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/userIDText"
        android:layout_alignBottom="@+id/userIDText"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="-2dp"
        android:layout_toEndOf="@+id/userIDText" />

    <TextView
        android:id="@+id/DisplayEmail"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/emailText"
        android:layout_alignBottom="@+id/emailText"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/emailText" />

    <TextView
        android:id="@+id/DisplayPhone"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/phoneText"
        android:layout_alignBottom="@+id/phoneText"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="114dp"
        android:layout_marginBottom="-1dp"
        android:layout_toEndOf="@+id/phoneText" />

    <Button
        android:id="@+id/patientListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="25dp"
        android:text="@string/ViewPatientListButton"
        android:textAllCaps="false" />

    <ImageView
        android:id="@+id/bodyMapProfile"
        android:layout_width="301dp"
        android:layout_height="278dp"
        android:layout_alignBottom="@+id/emailText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="58dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="-385dp"
        android:contentDescription="BodyMap"
        android:src="@drawable/body_map" />

    <EditText
        android:id="@+id/searchBox"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/DisplayPhone"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="373dp"
        android:layout_toEndOf="@+id/userIDText"
        android:ems="10"
        android:hint="@string/searchBoxAtProfile"
        android:inputType="text"
        android:textAlignment="viewStart" />

</RelativeLayout>