<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileActivity">

    <TextView
        android:id="@+id/ProfileSubTitle"
        android:layout_width="105dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/userProfileSubTitle"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/userIDText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="125dp"
        android:text="@string/userIDText"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userIDText"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/emailText" />

    <TextView
        android:id="@+id/phoneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailText"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/phoneText" />

    <TextView
        android:id="@+id/DisplayUserID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/userIDText"
        android:layout_alignBottom="@+id/userIDText"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="-2dp"
        android:layout_toEndOf="@+id/userIDText" />

    <TextView
        android:id="@+id/DisplayEmail"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/emailText"
        android:layout_alignBottom="@+id/emailText"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/emailText" />

    <TextView
        android:id="@+id/DisplayPhone"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/phoneText"
        android:layout_alignBottom="@+id/phoneText"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="114dp"
        android:layout_marginBottom="-1dp"
        android:layout_toEndOf="@+id/phoneText" />
</RelativeLayout>